<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="vn.tiki.app.home.screen.home.HomeViewModel" />
    </data>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        isRefreshing="@{viewModel.result.isLoading}"
        onRefreshListener="@{()->viewModel.fetchKeywords()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                goneUnless="@{viewModel.result.isSuccess}"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_hot_keywords"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/home_hot_keywords"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:clipToPadding="false"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_hot_keywords" />

                <TextView
                    android:id="@+id/label_login_message"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xhxlarge"
                    android:text="@string/home_login_message"
                    app:layout_constraintLeft_toLeftOf="@id/label_hot_keywords"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    android:text="@string/home_register"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toLeftOf="@id/label_login_message"
                    app:layout_constraintTop_toBottomOf="@id/label_login_message" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xxmedium"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/home_login"
                    android:textColor="@android:color/white"
                    app:layout_constraintLeft_toRightOf="@id/btn_register"
                    app:layout_constraintTop_toTopOf="@id/btn_register" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                goneUnless="@{viewModel.result.isError}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/img_error"
                    android:layout_width="@dimen/spacing_xxxxlarge"
                    android:layout_height="@dimen/spacing_xxxxlarge"
                    android:src="@android:drawable/stat_notify_error"
                    android:tint="@android:color/darker_gray"
                    app:layout_constraintBottom_toTopOf="@id/label_error"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/label_error"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_load_keywords_failed"
                    android:tint="@android:color/darker_gray"
                    app:layout_constraintBottom_toTopOf="@id/btn_try_again"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_error" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_try_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:backgroundTint="@android:color/holo_purple"
                    android:onClick="@{(v)->viewModel.fetchKeywords()}"
                    android:text="@string/home_try_again"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_error" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>